                        CHANGES IN VERSION 5.21m
                 (Klaus Reimer <k@ailis.de>, 21 Sep 2005)

Applied patch from Joey Schulze fixing the following problems:
  
  - Fixed insecure permissions of a temporary file [arcsvc.c, CAN-2005-2945]
  - Fixed insecure temporary file creation [arcsvc.c, CAN-2005-2992]



                        CHANGES IN VERSION 5.21l
                 (Klaus Reimer <k@ailis.de>, 13 Mar 2005)
                        
Fixed warnings because missing inclusion of string.h and fixed a gcc-4.0
problem with marc.c (Missing declaration of makefnam).



                        CHANGES IN VERSION 5.21k
                 (Klaus Reimer <k@ailis.de>, 6 Nov 2004)
                        
Ulf Harnhammar found some buffer overflows causing segfaults and provided a
patch which is now applied to arc to close these bugs.



                        CHANGES IN VERSION 5.21


The following changes have been made in ARC version 5.21, but have not
yet been included in the manual:

o   When adding files to an archive, ARC now shows the stowage facter
    achieved on each file.

o   A bug was found that would keep an archive entry from being
    encrypted if it was stored without compression.  This has now been
    fixed.

o   If changes are made to a corrupted archive, the corrupted entries
    are discarded.  This makes it possible to lose data accidentally.
    ARC will now only make changes to a corrupted archive if the W
    (suppress Warnings) option has been given.

o   The N (suppress Notes) option now suppresses the "Creating
    archive" note when a new archive is being created.

o   The N (suppress Notes) option formerly did nothing useful when
    used with the L (List files) command.  It now causes a terse
    listing of filenames only, suitable for use with pipes and
    redirection.

o   The list of filenames given to ARC may now include indirect
    references.  If a filename begins with an "at sign" ("@"), it is